@@ -1,5 +1,5 @@
 AC_INIT(src/mod_mono.c)
-AM_INIT_AUTOMAKE(mod_mono, 0.10)
+AM_INIT_AUTOMAKE(mod_mono, 0.10.99)
 AM_CONFIG_HEADER(include/mod_mono_config.h:config.in)
 
 AC_PROG_CC
@@ -26,6 +26,7 @@ AC_ARG_WITH(apxs, [  --with-apxs=PATH        Path to apxs],
 ],
 AC_MSG_RESULT(no))
 
+AC_CHECK_FUNCS(setenv putenv)
 # check for --with-apr-config
 # apr-config - at least in debian apr include directory is different
 APR_INCLUDES=""
