@@ -1,3 +1,9 @@
+2004-06-02  Gonzalo Paniagua Javier <gonzalo@ximian.com>
+
+	* configure.in: check for setenv and putenv.
+	* src/mod_mono.c: use putenv when setenv is not available. Fixes build
+	problem under Solaris 8.
+
 2004-05-29  Gonzalo Paniagua Javier <gonzalo@ximian.com>
 
 	* INSTALL:
